Horizontal scroll fix

--- a/lesson7/css/article.css
+++ b/lesson7/css/article.css
@@ -2,7 +2,9 @@ html {
 	font-family: Ubuntu, sans-serif;
 	font-weight: 400;
 }
-
+body {
+	overflow-x: hidden;
+}
 body * {
 	box-sizing: border-box;
 }
